CAH/deployment-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: cah
  labels:
    app: client
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: client
          resources:
            limits:
              cpu: "1000m"
              memory: "300M"
            requests:
              cpu: "500m"
              memory: "300M"
          image: massivedecks/client
          ports:
            - containerPort: 8080
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
