CAH/service-client.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: cah
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
