CAH/service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: cah
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
