CAH/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: cah
spec:
  rules:
    - host: cah.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 8080
